Redirect index page to notebooks; inline import service functions in API to resolve import issues and maintain functionality.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,4 @@
 ---
-import Welcome from "../components/Welcome.astro";
-import Layout from "../layouts/Layout.astro";
+// Redirect to notebooks page
+return Astro.redirect("/notebooks");
 ---
-
-<Layout>
-  <Welcome />
-</Layout>
