--- a/src/pages/import.astro
+++ b/src/pages/import.astro
@@ -4,7 +4,7 @@ import ImportView from "../components/ImportView";
 import AuthGuard from "../components/AuthGuard";
 ---
 
-<AppLayout title="Import - 10x Phrase Follower" currentPath="/import">
+<AppLayout title="Import - Phrase Follower" currentPath="/import">
   <AuthGuard client:load>
     <div class="space-y-6">
       <div class="flex items-center justify-between">
