--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import AuthCard from "../components/AuthCard";
 ---
 
-<Layout title="Login - 10x Phrase Follower">
+<Layout title="Login - Phrase Follower">
   <div class="min-h-screen flex items-center justify-center bg-background">
     <AuthCard client:load />
   </div>
