--- a/src/pages/notebooks/index.astro
+++ b/src/pages/notebooks/index.astro
@@ -4,7 +4,7 @@ import NotebookList from "../../components/NotebookList";
 import AuthGuard from "../../components/AuthGuard";
 ---
 
-<AppLayout title="Notebooks - 10x Phrase Follower" currentPath="/notebooks">
+<AppLayout title="Notebooks - Phrase Follower" currentPath="/notebooks">
   <AuthGuard client:load>
     <div class="space-y-6">
       <div class="flex items-center justify-between">
